overspilling on screens less than 390 fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,14 +79,7 @@ a {
 /***** The font size for the brand-logo is a materialize default and it was 
 overlapping on a small screen that's why media query added *****/
 @media only screen and (max-width: 600px) {  
-    a.brand-logo {
-    font-size: 1.5rem;
-    }
-}
-
-/***** The font size for the h4 is a materialize default and it was not 
-visually appealing on a small screen that's why media query added *****/
-@media only screen and (max-width: 600px) {  
+    a.brand-logo,
     h4 {
     font-size: 1.5rem;
     }
@@ -96,7 +89,16 @@ visually appealing on a small screen that's why media query added *****/
 visually appealing on a small screen that's why media query added *****/
 @media only screen and (max-width: 600px) {  
     h5 {
-    font-size: 1.3rem;
+    font-size: 16px;
+    }
+}
+
+/***** The font size for the h4 is a materialize default and it was overspilling 
+on a small screen less than 390 that's why media query added *****/
+@media only screen and (max-width: 390px) {  
+    a.brand-logo,
+    h4 {
+    font-size: 16px;
     }
 }
   
